# croatian-stt

./: .gitignore  AGENTS.md
croatian-stt/: package-lock.json  package.json
croatian-stt-backend/: README.md  main.py  pyproject.toml
croatian-stt-backend/croatian_stt_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
croatian-stt/public/: pcm-worklet.js
croatian-stt/src/app/: page.tsx
croatian-stt/src/app/api/token/: route.ts
